-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 19, repo-loom
-
Component/s: hotspot
-
b28
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8288920 | 20 | Ron Pressler | P3 | Resolved | Fixed | b03 |
| JDK-8291279 | 19.0.2 | Ron Pressler | P3 | Resolved | Fixed | b01 |
| JDK-8291127 | 19.0.1 | Ron Pressler | P3 | Resolved | Fixed | b04 |
loom repo, tier4. This test fails intermittently with:
# Internal Error (<top>/workspace/open/src/hotspot/share/prims/jvmtiThreadState.cpp:601), pid=11953, tid=12203
# assert(_cur_stack_depth == num_frames) failed: cur_stack_depth out of sync _cur_stack_depth: 14 num_frames: 18
With -Xcomp runs it seems to fail more frequently, the stack trace is the same:
Stack: [0x00007fc964b85000,0x00007fc964c86000], sp=0x00007fc964c840b0, free space=1020k
Thread 0x00007fc9743a5150 [9507]
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x11cacdc] JvmtiThreadState::decr_cur_stack_depth()+0xdc
V [libjvm.so+0x118d5c0] JvmtiExport::post_method_exit_inner(JavaThread*, methodHandle&, JvmtiThreadState*, bool, frame, jvalue&)+0x210
V [libjvm.so+0x11906bb] JvmtiExport::post_method_exit(JavaThread*, Method*, frame)+0x1fb
V [libjvm.so+0xec0d61] InterpreterRuntime::post_method_exit(JavaThread*)+0x91
j jdk.internal.vm.Continuation.enter0()V+9 java.base@19-internal
j jdk.internal.vm.Continuation.enter(Ljdk/internal/vm/Continuation;Z)V+1 java.base@19-internal
J 3648 jdk.internal.vm.Continuation.enterSpecial(Ljdk/internal/vm/Continuation;Z)V java.base@19-internal (0 bytes) @ 0x00007fc969e017e9 [0x00007fc969e01760+0x0000000000000089]
j jdk.internal.vm.Continuation.run()V+117 java.base@19-internal
j ContFramePopTest.runTest()V+43
j ContFramePopTest.main([Ljava/lang/String;)V+49
J 3149 c2 java.lang.invoke.LambdaForm$DMH+0x0000000801002000.invokeStatic(Ljava/lang/Object;Ljava/lang/Object;)V java.base@19-internal (14 bytes) @ 0x00007fc969ccced8 [0x00007fc969ccce80+0x0000000000000058]
J 3206 c2 java.lang.invoke.LambdaForm$MH+0x0000000801003400.invoke(Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;)Ljava/lang/Object; java.base@19-internal (38 bytes) @ 0x00007fc969d36170 [0x00007fc969d360a0+0x00000000000000d0]
J 3207 c2 java.lang.invoke.Invokers$Holder.invokeExact_MT(Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;)Ljava/lang/Object; java.base@19-internal (24 bytes) @ 0x00007fc969d3bab8 [0x00007fc969d3b960+0x0000000000000158]
j jdk.internal.reflect.DirectMethodHandleAccessor.invokeImpl(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+55 java.base@19-internal
j jdk.internal.reflect.DirectMethodHandleAccessor.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+23 java.base@19-internal
J 1132 c2 java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object; java.base@19-internal (108 bytes) @ 0x00007fc96992f3c0 [0x00007fc96992f120+0x00000000000002a0]
j com.sun.javatest.regtest.agent.MainWrapper$MainThread.run()V+172
J 3104 c2 java.lang.Thread.run()V java.base@19-internal (26 bytes) @ 0x00007fc969ce20e8 [0x00007fc969ce2060+0x0000000000000088]
v ~StubRoutines::call_stub 0x00007fc9695a5d4a
V [libjvm.so+0xed30c7] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, JavaThread*)+0x4e7
V [libjvm.so+0xed39ec] JavaCalls::call_virtual(JavaValue*, Klass*, Symbol*, Symbol*, JavaCallArguments*, JavaThread*)+0x26c
V [libjvm.so+0xed3af7] JavaCalls::call_virtual(JavaValue*, Handle, Klass*, Symbol*, Symbol*, JavaThread*)+0x77
V [libjvm.so+0x1004c99] thread_entry(JavaThread*, JavaThread*)+0x89
V [libjvm.so+0x174d3ca] JavaThread::thread_main_inner()+0x1ea
V [libjvm.so+0x1754990] Thread::call_run()+0x100
V [libjvm.so+0x1492844] thread_native_entry(Thread*)+0x104
# Internal Error (<top>/workspace/open/src/hotspot/share/prims/jvmtiThreadState.cpp:601), pid=11953, tid=12203
# assert(_cur_stack_depth == num_frames) failed: cur_stack_depth out of sync _cur_stack_depth: 14 num_frames: 18
With -Xcomp runs it seems to fail more frequently, the stack trace is the same:
Stack: [0x00007fc964b85000,0x00007fc964c86000], sp=0x00007fc964c840b0, free space=1020k
Thread 0x00007fc9743a5150 [9507]
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x11cacdc] JvmtiThreadState::decr_cur_stack_depth()+0xdc
V [libjvm.so+0x118d5c0] JvmtiExport::post_method_exit_inner(JavaThread*, methodHandle&, JvmtiThreadState*, bool, frame, jvalue&)+0x210
V [libjvm.so+0x11906bb] JvmtiExport::post_method_exit(JavaThread*, Method*, frame)+0x1fb
V [libjvm.so+0xec0d61] InterpreterRuntime::post_method_exit(JavaThread*)+0x91
j jdk.internal.vm.Continuation.enter0()V+9 java.base@19-internal
j jdk.internal.vm.Continuation.enter(Ljdk/internal/vm/Continuation;Z)V+1 java.base@19-internal
J 3648 jdk.internal.vm.Continuation.enterSpecial(Ljdk/internal/vm/Continuation;Z)V java.base@19-internal (0 bytes) @ 0x00007fc969e017e9 [0x00007fc969e01760+0x0000000000000089]
j jdk.internal.vm.Continuation.run()V+117 java.base@19-internal
j ContFramePopTest.runTest()V+43
j ContFramePopTest.main([Ljava/lang/String;)V+49
J 3149 c2 java.lang.invoke.LambdaForm$DMH+0x0000000801002000.invokeStatic(Ljava/lang/Object;Ljava/lang/Object;)V java.base@19-internal (14 bytes) @ 0x00007fc969ccced8 [0x00007fc969ccce80+0x0000000000000058]
J 3206 c2 java.lang.invoke.LambdaForm$MH+0x0000000801003400.invoke(Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;)Ljava/lang/Object; java.base@19-internal (38 bytes) @ 0x00007fc969d36170 [0x00007fc969d360a0+0x00000000000000d0]
J 3207 c2 java.lang.invoke.Invokers$Holder.invokeExact_MT(Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;)Ljava/lang/Object; java.base@19-internal (24 bytes) @ 0x00007fc969d3bab8 [0x00007fc969d3b960+0x0000000000000158]
j jdk.internal.reflect.DirectMethodHandleAccessor.invokeImpl(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+55 java.base@19-internal
j jdk.internal.reflect.DirectMethodHandleAccessor.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+23 java.base@19-internal
J 1132 c2 java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object; java.base@19-internal (108 bytes) @ 0x00007fc96992f3c0 [0x00007fc96992f120+0x00000000000002a0]
j com.sun.javatest.regtest.agent.MainWrapper$MainThread.run()V+172
J 3104 c2 java.lang.Thread.run()V java.base@19-internal (26 bytes) @ 0x00007fc969ce20e8 [0x00007fc969ce2060+0x0000000000000088]
v ~StubRoutines::call_stub 0x00007fc9695a5d4a
V [libjvm.so+0xed30c7] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, JavaThread*)+0x4e7
V [libjvm.so+0xed39ec] JavaCalls::call_virtual(JavaValue*, Klass*, Symbol*, Symbol*, JavaCallArguments*, JavaThread*)+0x26c
V [libjvm.so+0xed3af7] JavaCalls::call_virtual(JavaValue*, Handle, Klass*, Symbol*, Symbol*, JavaThread*)+0x77
V [libjvm.so+0x1004c99] thread_entry(JavaThread*, JavaThread*)+0x89
V [libjvm.so+0x174d3ca] JavaThread::thread_main_inner()+0x1ea
V [libjvm.so+0x1754990] Thread::call_run()+0x100
V [libjvm.so+0x1492844] thread_native_entry(Thread*)+0x104
- backported by
-
JDK-8288920 serviceability/jvmti/vthread/ContStackDepthTest/ContStackDepthTest.java failing in loom repo with Xcomp
-
- Resolved
-
-
JDK-8291127 serviceability/jvmti/vthread/ContStackDepthTest/ContStackDepthTest.java failing in loom repo with Xcomp
-
- Resolved
-
-
JDK-8291279 serviceability/jvmti/vthread/ContStackDepthTest/ContStackDepthTest.java failing in loom repo with Xcomp
-
- Resolved
-
- relates to
-
JDK-8288949 serviceability/jvmti/vthread/ContStackDepthTest/ContStackDepthTest.java failing
-
- Closed
-
(1 links to)