8278053: serviceability/jvmti/vthread/ContStackDepthTest/ContStackDepthTest.java failing in loom repo with Xcomp

Reviewed-by: sspitsyn, pchilanomate, coleenp